--- a/Dsw2025TPI.Data/Dsw2025TPI.Data.csproj
+++ b/Dsw2025TPI.Data/Dsw2025TPI.Data.csproj
@@ -1,6 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Dsw2025TPI.Domain\Dsw2025TPI.Domain.csproj" />
     <ProjectReference Include="..\Dsw2025TPI.Application\Dsw2025TPI.Application.csproj" />
   </ItemGroup>
